force-app/main/default/objects/JKLL_Inventory__c/JKLL_Inventory__c.object-meta.xml
<CustomObject>
    <label>JKLL Inventory</label>
    <nameField>
        <label>JKLL Inventory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>JKLL Inventories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>