force-app/main/default/objects/JKLL_Inventory__c/fields/content_VersionId__c.field-meta.xml
<CustomField>
    <fullName>content_VersionId__c</fullName>
    <label>content_VersionId</label>
    <length>180</length>
    <type>Text</type>
</CustomField>