force-app/main/default/objects/JKLL_Inventory__c/fields/ContentVersionId__c.field-meta.xml
<CustomField>
    <fullName>ContentVersionId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ContentVersionId</label>
    <referenceTo>ContentFolder</referenceTo>
    <relationshipLabel>JKLL Inventories</relationshipLabel>
    <relationshipName>JKLL_Inventories</relationshipName>
    <type>Lookup</type>
</CustomField>