force-app/main/default/objects/JKLL_Inventory__c/fields/inventoryName__c.field-meta.xml
<CustomField>
    <fullName>inventoryName__c</fullName>
    <label>inventoryName</label>
    <length>120</length>
    <type>Text</type>
</CustomField>